# tdd-multi-currency-money

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
tdd_multi_currency_money/: bank.py  dollar.py  expression.py  franc.py  money.py  pair.py  sum.py
tests/: test_tests.py
