[tool.poetry]
name = "tdd-multi-currency-money"
version = "0.1.0"
description = ""
authors = ["Rob Ratcliffe <rlr@tcliffe.dev>"]
readme = "README.md"
packages = [{include = "tdd_multi_currency_money"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
numpy = "1.22.0"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
